--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tdapp"]
-	path = tdapp
-	url = ./tdapp
+path = tdapp
+    url = https://github.com/Mohan-cmd/Task_Management_Frontend_TDAPP.git
